[gd_scene load_steps=7 format=2]

[ext_resource path="res://UIMain/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://UIMain/Sounds/Click.wav" type="AudioStream" id=2]
[ext_resource path="res://UIMain/Sounds/Close.wav" type="AudioStream" id=3]
[ext_resource path="res://UIMain/Sounds/Select.wav" type="AudioStream" id=4]
[ext_resource path="res://UIMain/TroopDetail/TroopDetail.gd" type="Script" id=5]
[ext_resource path="res://Fonts/font_header.tres" type="FontFile" id=6]

[node name="TroopDetail" type="Panel"]
offset_left = -1.0
offset_right = 780.0
offset_bottom = 480.0
theme = ExtResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="A" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="A"]
offset_right = 779.0
offset_bottom = 36.0
custom_fonts/font = ExtResource( 6 )
text = "TROOP_DETAIL"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="H1" type="HBoxContainer" parent="A"]
offset_top = 52.0
offset_right = 779.0
offset_bottom = 200.0
custom_constants/separation = 8

[node name="V1" type="VBoxContainer" parent="A/H1"]
offset_right = 103.0
offset_bottom = 148.0
custom_constants/separation = 8

[node name="Label10" type="Label" parent="A/H1/V1"]
offset_right = 103.0
offset_bottom = 18.0
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "LEADER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leader" type="Label" parent="A/H1/V1"]
offset_top = 26.0
offset_right = 103.0
offset_bottom = 44.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="A/H1/V1"]
offset_top = 52.0
offset_right = 103.0
offset_bottom = 70.0
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "PERSON_LIST"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PersonList" type="VBoxContainer" parent="A/H1/V1"]
offset_top = 78.0
offset_right = 103.0
offset_bottom = 78.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="GridContainer" parent="A/H1"]
offset_left = 111.0
offset_right = 779.0
offset_bottom = 148.0
size_flags_horizontal = 3
custom_constants/v_separation = 8
custom_constants/h_separation = 8
columns = 6

[node name="Label14" type="Label" parent="A/H1/Content"]
offset_right = 112.0
offset_bottom = 18.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "FACTION"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label13" type="Label" parent="A/H1/Content"]
offset_left = 120.0
offset_right = 214.0
offset_bottom = 18.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "SECTION"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="A/H1/Content"]
offset_left = 222.0
offset_right = 301.0
offset_bottom = 18.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "QUANTITY"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label11" type="Label" parent="A/H1/Content"]
offset_left = 309.0
offset_right = 420.0
offset_bottom = 18.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "ORDER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label12" type="Label" parent="A/H1/Content"]
offset_left = 428.0
offset_right = 554.0
offset_bottom = 18.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "TARGET"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label17" type="Label" parent="A/H1/Content"]
offset_left = 562.0
offset_right = 668.0
offset_bottom = 18.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "EXPERIENCE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Faction" type="Label" parent="A/H1/Content"]
offset_top = 26.0
offset_right = 112.0
offset_bottom = 44.0
size_flags_horizontal = 3
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Section" type="Label" parent="A/H1/Content"]
offset_left = 120.0
offset_top = 26.0
offset_right = 214.0
offset_bottom = 44.0
size_flags_horizontal = 3
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quantity" type="Label" parent="A/H1/Content"]
offset_left = 222.0
offset_top = 26.0
offset_right = 301.0
offset_bottom = 44.0
size_flags_horizontal = 3
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Order" type="Label" parent="A/H1/Content"]
offset_left = 309.0
offset_top = 26.0
offset_right = 420.0
offset_bottom = 44.0
size_flags_horizontal = 3
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Target" type="Label" parent="A/H1/Content"]
offset_left = 428.0
offset_top = 26.0
offset_right = 554.0
offset_bottom = 44.0
size_flags_horizontal = 3
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Experience" type="Label" parent="A/H1/Content"]
offset_left = 562.0
offset_top = 26.0
offset_right = 668.0
offset_bottom = 44.0
size_flags_horizontal = 3
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label9" type="Label" parent="A/H1/Content"]
offset_top = 52.0
offset_right = 112.0
offset_bottom = 70.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "MILITARY_KIND"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label18" type="Label" parent="A/H1/Content"]
offset_left = 120.0
offset_top = 52.0
offset_right = 214.0
offset_bottom = 70.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "NAVAL_KIND"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="A/H1/Content"]
offset_left = 222.0
offset_top = 52.0
offset_right = 301.0
offset_bottom = 70.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "OFFENCE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="A/H1/Content"]
offset_left = 309.0
offset_top = 52.0
offset_right = 420.0
offset_bottom = 70.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "DEFENCE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="A/H1/Content"]
offset_left = 428.0
offset_top = 52.0
offset_right = 554.0
offset_bottom = 70.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "TROOP_MORALE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="A/H1/Content"]
offset_left = 562.0
offset_top = 52.0
offset_right = 668.0
offset_bottom = 70.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "COMBATIVITY"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MilitaryKind" type="Label" parent="A/H1/Content"]
offset_top = 78.0
offset_right = 112.0
offset_bottom = 96.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "----"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NavalKind" type="Label" parent="A/H1/Content"]
offset_left = 120.0
offset_top = 78.0
offset_right = 214.0
offset_bottom = 96.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "----"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Offence" type="Label" parent="A/H1/Content"]
offset_left = 222.0
offset_top = 78.0
offset_right = 301.0
offset_bottom = 96.0
size_flags_horizontal = 3
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Defence" type="Label" parent="A/H1/Content"]
offset_left = 309.0
offset_top = 78.0
offset_right = 420.0
offset_bottom = 96.0
size_flags_horizontal = 3
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Morale" type="Label" parent="A/H1/Content"]
offset_left = 428.0
offset_top = 78.0
offset_right = 554.0
offset_bottom = 96.0
size_flags_horizontal = 3
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Combativity" type="Label" parent="A/H1/Content"]
offset_left = 562.0
offset_top = 78.0
offset_right = 668.0
offset_bottom = 96.0
size_flags_horizontal = 3
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label7" type="Label" parent="A/H1/Content"]
offset_top = 104.0
offset_right = 112.0
offset_bottom = 122.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "SPEED"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label8" type="Label" parent="A/H1/Content"]
offset_left = 120.0
offset_top = 104.0
offset_right = 214.0
offset_bottom = 122.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "INITIATIVE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label10" type="Label" parent="A/H1/Content"]
offset_left = 222.0
offset_top = 104.0
offset_right = 301.0
offset_bottom = 122.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "CRITICAL"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label15" type="Label" parent="A/H1/Content"]
offset_left = 309.0
offset_top = 104.0
offset_right = 420.0
offset_bottom = 122.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "ANTI_CRITICAL"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label16" type="Label" parent="A/H1/Content"]
offset_left = 428.0
offset_top = 104.0
offset_right = 554.0
offset_bottom = 122.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "CRITICAL_RATE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label19" type="Label" parent="A/H1/Content"]
offset_left = 562.0
offset_top = 104.0
offset_right = 668.0
offset_bottom = 122.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speed" type="Label" parent="A/H1/Content"]
offset_top = 130.0
offset_right = 112.0
offset_bottom = 148.0
size_flags_horizontal = 3
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Initiative" type="Label" parent="A/H1/Content"]
offset_left = 120.0
offset_top = 130.0
offset_right = 214.0
offset_bottom = 148.0
size_flags_horizontal = 3
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Critical" type="Label" parent="A/H1/Content"]
offset_left = 222.0
offset_top = 130.0
offset_right = 301.0
offset_bottom = 148.0
size_flags_horizontal = 3
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AntiCritical" type="Label" parent="A/H1/Content"]
offset_left = 309.0
offset_top = 130.0
offset_right = 420.0
offset_bottom = 148.0
size_flags_horizontal = 3
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CriticalRate" type="Label" parent="A/H1/Content"]
offset_left = 428.0
offset_top = 130.0
offset_right = 554.0
offset_bottom = 148.0
size_flags_horizontal = 3
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Confirm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="hide" from="." to="." method="_on_CreateTroop_hide"]
